--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
     Each issue is written on the paint chips at the bottom of our home page—click on them to see!—and is compiled only of works that embody the particular color of the paint chips they are published on (we have a dedicated workforce of wooden door knobs that go through every submission and analyze them before assigning each a color).
 		<div class="chair"></div>
 		<div class="couch"></div>
-		<a href="LakeMahogany.html"><div class="homebutton"><br>
+		<a href="index.html"><div class="homebutton"><br>
 &ensp;Home&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;</div></a>
 </div>
 </body>
