--- a/Staff.html
+++ b/Staff.html
@@ -12,7 +12,7 @@
 	<div class="Mochamint">We are currently in the process of hiring new people--sentient, left-leaning paint chips are preferred, but we would also be open to employing humans.  If you want to join our team, send a resume and writing sample to lakemahoganylitmag@gmail.com.</div>
 		<div class="chair"></div>
 		<div class="couch"></div>
-		<a href="LakeMahogany.html"><div class="homebutton"><br>
+		<a href="index.html"><div class="homebutton"><br>
 &ensp;Home&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;</div></a>
 </body>
 </html>
