--- a/red1.html
+++ b/red1.html
@@ -83,7 +83,7 @@ Blood Drive, by Rachel Vera Tsimmerman</i><br>&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&n
 	<img src="../Images for Lake Mahogany/aryehsphoto2.jpg" alt=""/><br>
 <i>I Hate You, by Rachel Vera Tsimmerman</i><br>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="../Images for Lake Mahogany/rachelsart2.jpg" alt=""/>
 </div>
-		<a href="LakeMahogany.html"><div class="homebutton"><br>
+		<a href="index.html"><div class="homebutton"><br>
 			&ensp;&ensp;&ensp;Home</div></a>
 </body>
 </html>
